# PkmnPatternReDesign

./: CMakeLists.txt  Card.cpp  Card.h  CardIDMaker.cpp  CardIDMaker.h  Player.cpp  Player.h  ProtoCD.cpp  ProtoCD.h  main.cpp
Attacking/: Attack.h  AttacksInterface.cpp  AttacksInterface.h
CData/: CDataEnums.h  CDataIdentities.cpp  CDataIdentities.h  CardData.cpp  CardData.h
Handler/: ActiveHandler.cpp  ActiveHandler.h  Cost.h  ETypeModifiers.cpp  ETypeModifiers.h  HitPoints.cpp  HitPoints.h
Utils/: CNameHash.cpp  CNameHash.h  Rand.cpp  Rand.h
Zones/: Zone.cpp  Zone.h
include/: CDataIdentities.h  IdentitiesBase.h
src/: CDataIdentities.cpp
